# python-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
config/: service.yaml
models/clip-image/: config.pbtxt
models/clip-image/1/: model.onnx
models/clip-text/: config.pbtxt
models/clip-text/1/: model.onnx
models/mpnet/: config.pbtxt
models/mpnet/1/: model.onnx
proto/: retriever.proto
proto/image/: image_embedding_request.proto  image_embedding_response.proto
proto/text/: text_chunks_response.proto  text_document_add_request.proto  text_document_add_response.proto  text_embedding_request.proto  text_embedding_response.proto
src/python_rag/config/: __init__.py  chunker.py  environment.py  postgres.py  qdrant.py  service.py  triton.py
src/python_rag/dto/: __init__.py  point.py  polygon.py  shift.py  size.py
src/python_rag/dto/chunker/: __init__.py  base_chunker.py  char_chunker.py  chunker_factory.py  chunker_interface.py  recursive_chunker.py  token_chunker.py
src/python_rag/dto/document/: __init__.py  chunk.py  chunk_interface.py  chunk_with_embedding.py  document.py  document_interface.py
src/python_rag/dto/hander/: __init__.py  base_handler.py  hander_interface.py
src/python_rag/errors/: __init__.py  base_error.py  triton_error.py
src/python_rag/monitoring/: __init__.py  metrics_holder.py
src/python_rag/proto/image/: __init__.py
src/python_rag/proto/retriever/: __init__.py
src/python_rag/proto/text/: __init__.py
src/python_rag/qdrant/: __init__.py  qdrant_manager.py  qdrant_manager_holder.py  scored_chunk.py
src/python_rag/server/: server.py  utils.py
src/python_rag/triton/: README.md  __init__.py  exceptions.py  models_factory.py  models_pool.py  models_pool_holder.py  transforms.py  triton_model.py  validation_status.py
src/python_rag/triton/classifiers/: __init__.py  age_classifier.py  car_classifier.py  classifier.py  gender_classifer.py
src/python_rag/triton/detectors/: __init__.py  detector.py  utils.py  yolo_detector.py
src/python_rag/triton/encoders/: __init__.py  base_encoder.py  crop_encoder.py  facenet_encoder.py  osnet_encoder.py  roialign_encoder.py  vit_encoder.py
src/python_rag/triton/image_encoders/: __init__.py  base_image_encoder.py  openclip_image_encoder.py
src/python_rag/triton/memory_manager/: __init__.py  cushm_manager.py  manager_interface.py  simple_manager.py
src/python_rag/triton/points_detectors/: __init__.py  iwpodnet_points_detector.py  points_detector.py
src/python_rag/triton/segmentators/: __init__.py  semantic_segmentator.py
src/python_rag/triton/text_encoders/: __init__.py  base_text_encoder.py  mpnet_text_encoder.py  openclip_text_encoder.py
src/python_rag/triton/text_recognizers/: __init__.py  lprnet_text_recongnizer.py  text_recognizer.py
