[project]
name = "python-rag"
version = "0.1.0"
description = "Python retrieval agumented generation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aioboto3==13.2.0",
    "aiochclient>=2.6.0",
    "betterproto2-compiler>=0.6.0",
    "betterproto2[all]>=0.6.0",
    "boto3==1.35.36",
    "clickhouse-connect>=0.8.17",
    "fastapi>=0.115.12",
    "gradio>=5.34.0",
    "grpcio>=1.73.0",
    "grpclib>=0.4.8",
    "gunicorn>=23.0.0",
    "imageio>=2.37.0",
    "langchain>=0.3.25",
    "mypy-boto3-s3==1.35.61",
    "numpy==2.2",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "piexif>=1.1.3",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "prometheus-client>=0.22.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pydantic-yaml>=1.5.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.3",
    "redis>=6.2.0",
    "shapely>=2.1.1",
    "streamlit>=1.45.1",
    "streamlit-navigation-bar>=3.3.0",
    "streamlit-tags>=1.2.8",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "tritonclient[all]>=2.41.0",
    "types-aioboto3[s3]==13.2.0.post1",
    "uvicorn>=0.34.3",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_rag"]

[tool.mypy]
python_version = 3.11
exclude = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "D", "N"]
ignore = ["E741"]
fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE",
    "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH",
    "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY",
    "UP", "YTT"
]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[dependency-groups]
dev = [
    "betterproto2-compiler>=0.6.0",
    "datasets>=3.6.0",
    "grpcio-tools>=1.73.0",
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mypy>=1.16.0",
    "plotly>=6.1.2",
    "ruff>=0.9.10",
    "seaborn>=0.13.2",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 10
